cmake_minimum_required(VERSION 3.8.0)
project(squid VERSION 0.1.0 LANGUAGES CXX) 
set(CMAKE_CXX_STANDARD 17)

include(CTest)
enable_testing()
INCLUDE_DIRECTORIES(./source)
aux_source_directory(./source/utility DIR_SRCS)
aux_source_directory(./source/loop DIR_SRCS)
aux_source_directory(./source/channel DIR_SRCS)
aux_source_directory(./source/concurrent DIR_SRCS)
aux_source_directory(./source/network DIR_SRCS)
aux_source_directory(./source/error DIR_SRCS)
aux_source_directory(./source DIR_SRCS)
add_subdirectory(./source/dependencies/fmt EXCLUDE_FROM_ALL)
add_executable(squid ${DIR_SRCS})
target_compile_features(squid PUBLIC cxx_std_17)
TARGET_LINK_LIBRARIES(squid
pthread fmt-header-only
)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
